# REDCap-EDA

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
schemas/: schema_sample_dataset.json
src/redcap_eda/: __init__.py  cast_schema.py  cli.py  load_case_data.py  logger.py  unified_report.py
src/redcap_eda/analysis/: eda.py  json_report_handler.py  lib.py
src/redcap_eda/analysis/categorical/: mixins.py
src/redcap_eda/analysis/datetime/: mixins.py
src/redcap_eda/analysis/missing/: mixins.py
src/redcap_eda/analysis/numerical/: mixins.py
src/redcap_eda/analysis/text/: mixins.py
test/: test_load_case_data.py
tests/: test_load_case_data.py
tests/fixtures/: toy_data.csv
