[project]
name = "redcap-eda"
version = "0.1.0"
description = "Perform exploratory data analysis on REDCap data"
authors = [
    {name = "Robert Portelli"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "redcap_eda", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
