[project]
name = "redcap-eda"
version = "0.1.0"
description = "Perform exploratory data analysis on REDCap data"
authors = [
    {name = "Robert Portelli"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "redcap_eda", from = "src"}]

[tool.poetry.scripts]
redcap-eda = "redcap_eda.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"
mypy = "^1.15.0"
requests-mock = "^1.12.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
