[project]
name = "redcap-eda"
version = "0.1.0"
description = "Perform exploratory data analysis on REDCap data"
authors = [
    {name = "Robert Portelli"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["redcap", "eda", "exploratory data analysis", "data visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pandas >=2.2.3,<3.0.0",
    "click >=8.1.8,<9.0.0",
    "requests >=2.32.3,<3.0.0",
    "wordcloud >=1.9.4,<2.0.0",
    "tqdm >=4.67.1,<5.0.0",
    "numpy >=2.2.3,<3.0.0",
    "pyyaml >=6.0.2,<7.0.0",
    "matplotlib >=3.10.0,<4.0.0",
    "seaborn >=0.13.2,<1.0.0"
]

[project.urls]
homepage = "https://github.com/yourusername/redcap-eda"
repository = "https://github.com/yourusername/redcap-eda"
issue_tracker = "https://github.com/yourusername/redcap-eda/issues"

[tool.poetry]
packages = [{include = "redcap_eda", from = "src"}]

[tool.poetry.scripts]
redcap-eda = "redcap_eda.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"
mypy = "^1.15.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
